--- a/assets/less/navigation.less
+++ b/assets/less/navigation.less
@@ -144,6 +144,7 @@
             }
 
             .down-arrow {
+                font-weight: bold;
                 transition: all 0.5s ease;
             }
         }
